// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popupTableBuilder should not render extra th if an item can not be deleted 1`] = `
"

  
    <title>Options</title>

    <link rel="shortcut icon" type="image/jpg" href="../../assets/icons/128x128.png">
    <link href="../../libs/bootstrap.min.css" rel="stylesheet">

    <style>
      .wrapper {
        padding-top: 20px;
        box-sizing: content-box;
      }

      body::-webkit-scrollbar {
        width: 5px;
        height: 8px;
        background-color: #aaa;
      }
      body::-webkit-scrollbar-thumb {
        background: #dc3545;
      }
      #content {
        visibility: hidden;
      }

      #popup-spinner {
        position: absolute;
        left: 45%;
        top: 40%;
      }

      .delete-new-item {
        display: block;
        margin: 0 auto;
      }

      #extraParam .form-control {
        width: 100%;
      }

      #extraParam .col-12 {
        margin: 10px auto;
      }

      .card {
        border: 0;
      }

      .actions {
        padding: 12px 0;
        background-color: rgb(0 0 0 / 90%);
      }

      .action-btns {
        width: 50%;
        margin: 0 auto;
        display: block;
      }

      .table {
        visibility: hidden;
      }

      .td-checkbox {
        display: flex;
        height: 54px;
        align-items: center;
      }
      .td-checkbox label {
        margin-left: 12px;
      }

      #withExtraThead {
        display: none;
      }
    </style>
  
  
    <div class="wrapper">
      <div class="container" id="popup-spinner">
        <div>
          <div class="spinner-border text-primary" role="status"></div>
        </div>
      </div>
      <div class="container-fluid" id="content">
        <div class="row"><h3>QueryParamsBuilder</h3></div>
        <div class="row" style="padding: 0 12px">
          <table class="table table-striped table-bordered">
            <thead>
              <tr>
                <th scope="col" style="display: flex; justify-content: space-between">
                  <span>Params to Apply</span>
                  |
                  <label for="check-all">
                    <input id="check-all" class="form-check-input check-all" type="checkbox">
                    Check All
                  </label>
                </th>
                <th scope="col">Url param value</th>
                <th id="withExtraThead" scope="col">Actions</th>
              </tr>
            </thead>
            <tbody>
  <tr>
    <td class="td-checkbox">
      <input class="form-check-input me-1" type="checkbox" value="apiKey" data-url-param-key="apiKey" data-bundle-name="api key" id="123" checked="" data-can-delete-from-popup="false">
      <label class="form-check-label" for="123">api key</label>
    </td>
    <td>
      <input type="text" class="form-control" data-id="123" placeholder="apiKey value" value="isASecret">
    </td>
    
  </tr>
</tbody>
          </table>
        </div>

        <div class="row">
          <div class="collapse" id="extraParam" style="padding: 0">
            <div class="card card-body">
              <form>
                <div class="col-12">
                  <input required="" type="text" class="form-control" id="bundleName" placeholder="Bundle Name">
                </div>
                <div class="col-12">
                  <input required="" type="text" class="form-control" id="urlParamKey" placeholder="Url param key">
                </div>
                <div class="col-12">
                  <input required="" type="text" class="form-control" id="urlParamValue" placeholder="Url param value">
                </div>
                <div class="col-12">
                  <button id="addNewBundle" style="width: 100%" type="submit" class="btn btn-outline-primary">
                    Add Bundle
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div class="row actions">
          <div class="col-6">
            <button id="applyParams" class="btn btn-outline-primary action-btns">
              Apply Params
            </button>
          </div>
          <div class="col-6">
            <a class="btn btn-outline-success action-btns" data-bs-toggle="collapse" href="#extraParam" role="button" aria-expanded="false" aria-controls="extraParam">
              Add Param
            </a>
          </div>
        </div>
      </div>
    </div>
    <script src="../../libs/bootstrap.min.js"></script>
    <script type="module" src="./index.js"></script>
  

"
`;

exports[`popupTableBuilder should render extra th if an item can be deleted 1`] = `
"

  
    <title>Options</title>

    <link rel="shortcut icon" type="image/jpg" href="../../assets/icons/128x128.png">
    <link href="../../libs/bootstrap.min.css" rel="stylesheet">

    <style>
      .wrapper {
        padding-top: 20px;
        box-sizing: content-box;
      }

      body::-webkit-scrollbar {
        width: 5px;
        height: 8px;
        background-color: #aaa;
      }
      body::-webkit-scrollbar-thumb {
        background: #dc3545;
      }
      #content {
        visibility: hidden;
      }

      #popup-spinner {
        position: absolute;
        left: 45%;
        top: 40%;
      }

      .delete-new-item {
        display: block;
        margin: 0 auto;
      }

      #extraParam .form-control {
        width: 100%;
      }

      #extraParam .col-12 {
        margin: 10px auto;
      }

      .card {
        border: 0;
      }

      .actions {
        padding: 12px 0;
        background-color: rgb(0 0 0 / 90%);
      }

      .action-btns {
        width: 50%;
        margin: 0 auto;
        display: block;
      }

      .table {
        visibility: hidden;
      }

      .td-checkbox {
        display: flex;
        height: 54px;
        align-items: center;
      }
      .td-checkbox label {
        margin-left: 12px;
      }

      #withExtraThead {
        display: none;
      }
    </style>
  
  
    <div class="wrapper">
      <div class="container" id="popup-spinner">
        <div>
          <div class="spinner-border text-primary" role="status"></div>
        </div>
      </div>
      <div class="container-fluid" id="content">
        <div class="row"><h3>QueryParamsBuilder</h3></div>
        <div class="row" style="padding: 0 12px">
          <table class="table table-striped table-bordered">
            <thead>
              <tr>
                <th scope="col" style="display: flex; justify-content: space-between">
                  <span>Params to Apply</span>
                  |
                  <label for="check-all">
                    <input id="check-all" class="form-check-input check-all" type="checkbox">
                    Check All
                  </label>
                </th>
                <th scope="col">Url param value</th>
                <th id="withExtraThead" scope="col">Actions</th>
              </tr>
            </thead>
            <tbody>
  <tr>
    <td class="td-checkbox">
      <input class="form-check-input me-1" type="checkbox" value="apiKey" data-url-param-key="apiKey" data-bundle-name="api key" id="123" checked="" data-can-delete-from-popup="true">
      <label class="form-check-label" for="123">api key</label>
    </td>
    <td>
      <input type="text" class="form-control" data-id="123" placeholder="apiKey value" value="isASecret">
    </td>
    <td><button class="btn btn-danger delete-new-item">-</button></td>
  </tr>
</tbody>
          </table>
        </div>

        <div class="row">
          <div class="collapse" id="extraParam" style="padding: 0">
            <div class="card card-body">
              <form>
                <div class="col-12">
                  <input required="" type="text" class="form-control" id="bundleName" placeholder="Bundle Name">
                </div>
                <div class="col-12">
                  <input required="" type="text" class="form-control" id="urlParamKey" placeholder="Url param key">
                </div>
                <div class="col-12">
                  <input required="" type="text" class="form-control" id="urlParamValue" placeholder="Url param value">
                </div>
                <div class="col-12">
                  <button id="addNewBundle" style="width: 100%" type="submit" class="btn btn-outline-primary">
                    Add Bundle
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div class="row actions">
          <div class="col-6">
            <button id="applyParams" class="btn btn-outline-primary action-btns">
              Apply Params
            </button>
          </div>
          <div class="col-6">
            <a class="btn btn-outline-success action-btns" data-bs-toggle="collapse" href="#extraParam" role="button" aria-expanded="false" aria-controls="extraParam">
              Add Param
            </a>
          </div>
        </div>
      </div>
    </div>
    <script src="../../libs/bootstrap.min.js"></script>
    <script type="module" src="./index.js"></script>
  

"
`;
